# ibkr-tws-api-auto-trader

./: .gitignore  .pre-commit-config.yaml  README-docker-compose.md  README.md  build.bat  build.sh  compose-manager.bat  compose-manager.sh  config.json  docker-compose.yml  go.mod  go.sum  implementation-notes.md  wails.json
.github/workflows/: go-ci-cd.yml  gui-ci-cd.yml  k8s-deploy.yml  python-ci-cd.yml
TraderAdmin/: app.go  go.mod  go.work.sum  wails.json
TraderAdmin/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  (+1 more)
backend/: app.go  main.go  schema.go
charts/: README.md  helm-deploy.bat  helm-deploy.sh
docs/: CICD.md  CI_CD_Setup.md  ci-cd.md
examples/: python_client.py
features/: trading-config-tab.feature
frontend/: index.html  package.json  tsconfig.json
go/: Dockerfile
minimal-wails-test/: go.mod  main.go
proto/: trader.proto
python/: Dockerfile  requirements.txt
trader-orchestrator/: .pre-commit-config.yaml  README-pre-commit.md  README.md  config.yaml  pyproject.toml  setup.cfg
trader-orchestrator/examples/: connect_to_tws.py  fetch_market_data.py
trader-orchestrator/src/config/: __init__.py  loader.py
trader-orchestrator/src/ibkr/: __init__.py  connector.py  market_data.py
trader-orchestrator/tests/: test_config.py  test_connector.py  test_market_data.py
trader-orchestrator/tests/features/: ibkr_connection.feature  market_data.feature  python_setup.feature
trader-orchestrator/tests/step_defs/: test_ibkr_connection.py  test_market_data.py  test_python_setup.py
(+106 files in other folders)
